--- a/.github/workflows/ci_reusable.yml
+++ b/.github/workflows/ci_reusable.yml
@@ -41,6 +41,7 @@ jobs:
         if: ${{inputs.lib == 'pycram' || inputs.lib == 'semantic_digital_twin'}}
         run: |
           cd cognitive_robot_abstract_machine
+          source /opt/ros/overlay_ws/install/setup.bash
           source /opt/ros/cram-env/bin/activate
           python ${{ inputs.lib }}/scripts/generate_orm.py
 
