[doc] fix building doc ci

--- a/.github/workflows/build_all_docs.yml
+++ b/.github/workflows/build_all_docs.yml
@@ -103,7 +103,10 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: aggregate
+          name: gh-pages-aggregate
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: gh-pages-aggregate
